# elevator-simulator

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
.qtcreator/: elevator-simulator.files  elevator-simulator.includes
docker/: Dockerfile.builder  Dockerfile.demo  Makefile
src/: Makefile.am
src/Control/: Button.h  CPanel.cc  CPanel.h  Config.cc  Config.h  Control.cc  Control.h  Display.cc  Display.h  Doors.cc  Doors.h  Elevator.cc  Elevator.h  Makefile.am  main.cc
src/Control/tests/: Makefile.am  TestControlAgent.cc  TestControlAgent.h  test_control.cc  test_display.cc  test_doors.cc  test_elevator.cc  tests.cc
